# CatZero

./: .gitignore  .gitmodules  Cargo.toml  README.md  alphazero.py  build.bat  env.bat  example.bat  main.py  mcts.py  network.py  play.bat  tensorboard.bat  tictactoe.bat  tictactoe.py
chess/: Cargo.toml
chess/examples/: learn.rs  paramtuner.rs  play.rs  tensorbord.rs
chess/src/: chess_state.rs  evaluator.rs  lib.rs  tmcts.rs
lib-catzero/: Cargo.toml
lib-catzero/model/: main.py
lib-catzero/src/: alphazero.rs  lib.rs  mcts.rs  model.rs  nmcts.rs  player.rs  tf.rs  zero_mcts.rs
lib-catzero/src/game/: mod.rs
model/: main.py
src/: learn.rs  main.rs  mcts.rs  model.rs  pyenv.rs  utils.rs  zero_mcts.rs
src/game/: mod.rs  tic_tac_toe.rs  tictactoe.rs
src/mcts/: mod.rs
tictactoe/: Cargo.toml  build.rs
tictactoe/benches/: bench.rs
tictactoe/examples/: learn.rs  paramtuner.rs  play.rs  tensorbord.rs
tictactoe/learn/: Cargo.toml
tictactoe/learn/examples/: learn.rs  play.rs  test.rs
tictactoe/learn/examples/trained_model/: keras_metadata.pb  saved_model.pb
tictactoe/learn/examples/trained_model/variables/: variables.index
tictactoe/learn/src/: evaluator.rs  lib.rs  tictactoe.rs  tmcts.rs
tictactoe/models/graph/: keras_metadata.pb  saved_model.pb
tictactoe/models/graph/variables/: variables.index
tictactoe/src/: evaluator.rs  lib.rs  main.rs  tictactoe.rs  tmcts.rs
tictactoe/visualize/: README.md  package.json
tictactoe/visualize/src/: App.vue
tictactoe/visualize/src/components/: Board.vue  BoardInfo.vue
