[package]
name = "catzero-tictactoe"
version = "0.1.0"
authors = ["BlockCat"]
edition = "2018"

[dependencies]
catzero = {path = "../lib-catzero"}
mcts = { path = "../mcts" }
rand = "0.4"
hashbrown = "0.1.7"
tensorflow = { version = "0.17.0", features=["tensorflow_gpu"] }
rayon = "1.5.1"

[build-dependencies]
catzero = {path = "../lib-catzero"}
